--- a/dlrc/lrc/templates/lrc/main.html
+++ b/dlrc/lrc/templates/lrc/main.html
@@ -23,6 +23,9 @@
 			{% endfor %}
 		{% endif %}
 	</div>
+
+	{% block profile %}{% endblock %}
+	
 	{% block about %}{% endblock %}
 
 	{% block register %}{% endblock %}
