--- a/dlrc/lrc/static/css/style.css
+++ b/dlrc/lrc/static/css/style.css
@@ -5,3 +5,22 @@
 body {
 	background-color: white;
 }
+
+/*Navbar text*/
+.hello-msg {
+	font-size: 16px;
+	color: white;
+	margin-right: 10px;
+}
+
+.logout-msg {
+	font-size: 16px;
+	color: white;
+	margin-right: 10px;
+}
+
+.prof-img {
+	border-radius: 50%;
+	width: 20px;
+	margin-right: 30px;
+}
