--- a/dlrc/users/templates/users/login.html
+++ b/dlrc/users/templates/users/login.html
@@ -79,13 +79,24 @@
                 </div>
                 <div class="d-flex justify-content-center form_container">
 
-                    <form method="POST" action="">
+                   <form method="POST" action="">
                         {% csrf_token %}
-                        {{ form | crispy }}
-
-                        <div class="d-flex justify-content-center mt-3 login_container">
-                            <input class="btn login_btn" type="submit" value="Login">
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fas fa-user"></i></span>
+                            </div>
+                            <input type="text" name="username" placeholder="Username..." class="form-control">
                         </div>
+                        <div class="input-group mb-2">
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fas fa-key"></i></span>
+                            </div>
+                                <input type="password" name="password" placeholder="Password..." class="form-control" >
+                        </div>
+
+                            <div class="d-flex justify-content-center mt-3 login_container">
+                                <input class="btn login_btn" type="submit" value="Login">
+                            </div>
                     </form>
                 </div>
 
