--- a/dlrc/lrc/templates/lrc/navbar.html
+++ b/dlrc/lrc/templates/lrc/navbar.html
@@ -13,9 +13,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Subjects</a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" href="#">Forums</a>
+            </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Schedule
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -47,11 +49,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
             </li>
+
         </ul>
     </div>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+    <span><a href="{% url 'login' %}" class="hello-msg">Login</a></span>
     {% endif %}
 </nav>
