--- a/dlrc/users/templates/users/register.html
+++ b/dlrc/users/templates/users/register.html
@@ -2,117 +2,45 @@
 {% load crispy_forms_tags %}
 {% block register %}
 
-<!DOCTYPE html>
-<html>
-    
-<head>
-    <title>Register</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<div class="container-fluid">
+  <div class="row no-gutter">
+    <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
+    <div class="col-md-8 col-lg-6">
+      <div class="login d-flex align-items-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-9 col-lg-8 mx-auto">
+              <h3 class="login-heading mb-4">Register</h3>
+              <form method="POST" action="">
+                {% csrf_token %}
 
-    <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background: #3f3f44 !important;
-        }
-        .user_card {
-            width: 350px;
-            margin-top: auto;
-            margin-bottom: auto;
-            background: #74cfbf;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            padding: 10px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            border-radius: 5px;
+                  {{form.username | as_crispy_field }}
 
-        }
 
-        .form_container {
-            margin-top: 20px;
-        }
 
-        #form-title{
-            color: #fff;
-        }
-        .login_btn {
-            width: 100%;
-            background: #33ccff !important;
-            color: white !important;
-        }
-        .login_btn:focus {
-            box-shadow: none !important;
-            outline: 0px !important;
-        }
-        .login_container {
-            padding: 0 2rem;
-        }
-        .input-group-text {
-            background: #f7ba5b !important;
-            color: white !important;
-            border: 0 !important;
-            border-radius: 0.25rem 0 0 0.25rem !important;
-        }
-        .input_user,
-        .input_pass:focus {
-            box-shadow: none !important;
-            outline: 0px !important;
-        }
+                  {{form.email | as_crispy_field }}
 
-    </style>
 
-</head>
-<body>
-    <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
-            <div class="user_card">
-                <div class="d-flex justify-content-center">
-                    <h3 id="form-title">REGISTER ACCOUNT</h3>
-                </div>
-                <div class="d-flex justify-content-center form_container">
+                  {{form.password1 | as_crispy_field }}
 
-                    <form method="POST" action="">
-                        {% csrf_token %}
-                        <div class="input-group mb-3">
 
-                            {{form.username | as_crispy_field }}
-                        </div>
-                        <div class="input-group mb-2">
+                  {{form.password2 | as_crispy_field }}
 
-                            {{form.email | as_crispy_field }}
-                        </div>
-                        <div class="input-group mb-2">
+                <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Register</button>
+              </form>
 
-                            {{form.password1| as_crispy_field }}
-                        </div>
-                        <div class="input-group mb-2">
-                            {{form.password2 | as_crispy_field }}
-                        </div>
-
-                        <div class="d-flex justify-content-center mt-3 login_container">
-                            <input class="btn login_btn" type="submit" value="Register Account">
-                        </div>
-
-                        <div class="mt-4">
+              <div class="mt-4">
                             <div class="d-flex justify-content-center links">
                                 Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
                             </div>
-                        </div>
-                    </form>
-                </div>
-
+             </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-
+  </div>
+</div>
 
 
 {% endblock %}
