--- a/dlrc/lrc/templates/lrc/navbar.html
+++ b/dlrc/lrc/templates/lrc/navbar.html
@@ -1,5 +1,8 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"> DLRC </a>
+    <a class="navbar-brand" href="#">
+    <img src="{% static 'images/navbar-logo.png' %}" width="30" height="30" alt="">
+  </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
