--- a/dlrc/lrc/templates/lrc/navbar.html
+++ b/dlrc/lrc/templates/lrc/navbar.html
@@ -19,16 +19,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Forums</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Schedule
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Appoint Session</a>
-                    <a class="dropdown-item" href="#">View Session</a>
-                    <a class="dropdown-item" href="#">Cancel Session</a>
-                </div>
-            </li>
+            {% if request.user.is_staff %}
+                        
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'lrc-admin' %}">Dashboard</a>
+                </li>
+            {% endif %}
             
           
         </ul>
@@ -36,9 +32,21 @@
 
     <span class="hello-msg"> Hello, <a href="{% url 'profile-page' %}" class="profile-msg">{{request.user}}!</a> </span>
     <span><img class="prof-img" src="{{user.profile.profile_pic.url}}" /></span>
-    <span> <a href="{% url 'logout' %}" class="logout-msg"> Logout</a> </span>
     
+    <ul class="navbar-nav ml-auto ml-md-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="#">Activity Log</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                    </div>
+                </li>
+            </ul>
+
     {% else %}
+
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item active">
@@ -58,4 +66,18 @@
 
     <span><a href="{% url 'login' %}" class="hello-msg">Login</a></span>
     {% endif %}
+
+<!--     {% if request.user.is_staff %}
+    
+    <ul class="navbar-nav ml-auto ml-md-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                        <a class="dropdown-item" href="#">Settings</a><a class="dropdown-item" href="#">Activity Log</a><a class="dropdown-item" href="{% url 'lrc-admin' %}">Dashboard</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'logout' %} ">Logout</a>
+                    </div>
+                </li>
+            </ul>
+    {% endif %} -->
 </nav>
